--- a/reset.css
+++ b/reset.css
@@ -2,12 +2,12 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      list-style: none;
+      /* list-style: none; */
       text-decoration: none;
 }
-ul, ol { padding: 0; }
+/* ul, ol { padding: 0; } */
 button { outline: none; cursor: pointer; }
 body { 
       font-family: 'Poppins';
-      /* font-family: 'quicksand'; */
+      font-family: 'quicksand';
 }
