--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,119 @@
-body {
-      width: 100vw;
-      min-height: 100vh;
-      background-image: linear-gradient(90deg, cyan, dodgerblue);
 
-      display: flex;
-      justify-content: center;
-      align-items: center;
-     
+:root {
+   --base: #ffc600;
 }
+
+/* form validation */
+.form-wrapper {
+      width: 400px;
+      background: #fff;
+      border-radius: 5px;
+      box-shadow: 1px 1px 5px rgba(0,0,0,0.4);
+      overflow: hidden;
+}
+header  {
+      background: #f7f7f7;
+      border-bottom: 2px solid #f0f0f0;
+      padding: 1rem 1.5rem;
+}
+.container {
+      padding: 1rem ;
+      height: 100vh;
+      background-color: #ffbb00;
+      overflow-x: scroll;
+
+      /* display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; */
+}
+
+header h1 {
+   margin: 0;
+   color: #555;
+}
+.form {
+      padding: 1rem 1.5rem;
+}
+.form-control {
+      margin-bottom: 10px;
+      /* padding-bottom: 20px; */
+      position: relative;
+}
+.form-control.error {
+      padding-bottom: 20px;
+}
+
+.form-control label {
+      display: inline-block;
+      margin-bottom: 5px;
+}
+.form-control input {
+      display: block;
+
+      width: 100%;
+      padding: 10px;
+      border: 2px solid #f0f0f0;
+      border-radius: 5px;
+      font-size: 14px;
+      outline: none;
+      font-family: inherit;
+}
+
+/* input classes  */
+.form-control.success input {
+    border-color: lightgreen;
+}
+.form-control.error input {
+      border-color: lightcoral;
+}
+
+
+.form-control i {
+      position: absolute;
+      top: 40px;
+      right: 10px;
+      visibility: hidden;
+}
+
+/* i classes */
+
+.form-control.success i.fa-check-circle {
+      visibility: visible;
+      color: lightgreen;
+}
+.form-control.error i.fa-exclamation-circle {
+      visibility: visible;
+      color: lightcoral;
+}
+
+
+
+.form-control small {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      visibility: hidden;
+}
+
+/* small classes */
+.form-control.error small {
+      visibility: visible;
+      color: lightcoral;
+}
+
+.form button {
+      width: 100%;
+      padding: .5rem;
+      border: 2px solid purple;
+      background: purple;
+      border-radius: 5px;
+      font-size: 1.4rem;
+      color: #fff;
+
+}
+
+
+
+
+
