--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,16 @@
     
 }
 
+
+/**************************************************************************/
+
+/* panels */
 .panels { 
       height: 100vh;
       margin-bottom: 1rem;
      
 }
+
 .panels-content {
       display: flex;  
 }
@@ -42,8 +47,11 @@
 
 }
 
+
+/************************************************************************/
+
 /* checkbox */
-#close {
+.close {
       position: absolute;
       top: 1rem;
       right: 1rem;
@@ -53,7 +61,7 @@
       -webkit-appearance: none; 
       cursor: pointer;
 }
-#close::before, #close::after {
+.close::before, .close::after {
       content: '';
       position: absolute;
       top: 0;
@@ -62,10 +70,10 @@
       height: 3px;
       background: #777; 
 }
-#close::before {
+.close::before {
       transform: rotate(-45deg);
 }
-#close::after {
+.close::after {
       transform: rotate(45deg);
 }
 
@@ -99,9 +107,7 @@
       padding: .6rem;
       display: flex;
       align-items: center;
-      /* flex-wrap: wrap; */
-
-
+      /* flex-wrap: wrap; */ 
 }
 .checkbox-content > .item:not(:last-child) {
       border-bottom: 1px solid #eee;
@@ -112,6 +118,11 @@
        padding: 1rem;
        display: inline-block;
       font-size: 1rem; 
+}
+.item input:checked ~ p { 
+      text-decoration: line-through;
+      color: orangered;
+
 }
 
 .item > p  {
